Delete Crud Functionality

--- a/src/Sass&Css/App.css
+++ b/src/Sass&Css/App.css
@@ -170,21 +170,21 @@ body {
   background-color: #000;
   background-image: none;
   border: 1px solid #000;
-  border-radius: 4px;
-  -webkit-box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
-          box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
+  border-radius: 0.5rem;
+  -webkit-box-shadow: #fff 0.17rem 0.17rem 0 0,#000 0.17rem 0.17rem 0 0.1rem;
+          box-shadow: #fff 0.17rem 0.17rem 0 0,#000 0.17rem 0.17rem 0 0.1rem;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   color: #fff;
   cursor: pointer;
   display: inline-block;
   font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
-  font-size: 14px;
+  font-size: 0.8rem;
   font-weight: 400;
-  line-height: 20px;
-  margin: 0 5px 10px 0;
+  line-height: 1.5rem;
+  margin: 0 0.2rem 0.5rem 0;
   overflow: visible;
-  padding: 12px 40px;
+  padding: 0.4rem 2rem;
   text-align: center;
   text-transform: none;
   -ms-touch-action: manipulation;
@@ -195,8 +195,8 @@ body {
   -webkit-user-select: none;
   vertical-align: middle;
   white-space: nowrap;
-  -webkit-transition: background-color 500ms;
-  transition: background-color 500ms;
+  -webkit-transition: all 200ms;
+  transition: all 200ms;
 }
 
 .aboutMe .aboutMe-div .aboutme-left button:focus {
@@ -579,21 +579,21 @@ body {
   background-color: #000;
   background-image: none;
   border: 1px solid #000;
-  border-radius: 4px;
-  -webkit-box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
-          box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
+  border-radius: 0.5rem;
+  -webkit-box-shadow: #fff 0.17rem 0.17rem 0 0,#000 0.17rem 0.17rem 0 0.1rem;
+          box-shadow: #fff 0.17rem 0.17rem 0 0,#000 0.17rem 0.17rem 0 0.1rem;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   color: #fff;
   cursor: pointer;
   display: inline-block;
   font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
-  font-size: 14px;
+  font-size: 0.8rem;
   font-weight: 400;
-  line-height: 20px;
-  margin: 0 5px 10px 0;
+  line-height: 1.5rem;
+  margin: 0 0.2rem 0.5rem 0;
   overflow: visible;
-  padding: 12px 40px;
+  padding: 0.4rem 2rem;
   text-align: center;
   text-transform: none;
   -ms-touch-action: manipulation;
@@ -604,8 +604,8 @@ body {
   -webkit-user-select: none;
   vertical-align: middle;
   white-space: nowrap;
-  -webkit-transition: background-color 500ms;
-  transition: background-color 500ms;
+  -webkit-transition: all 200ms;
+  transition: all 200ms;
 }
 
 .contact .seat button:focus, .contact .time button:focus, .contact .button button:focus {
@@ -747,21 +747,21 @@ nav li {
   background-color: #000;
   background-image: none;
   border: 1px solid #000;
-  border-radius: 4px;
-  -webkit-box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
-          box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
+  border-radius: 0.5rem;
+  -webkit-box-shadow: #fff 0.17rem 0.17rem 0 0,#000 0.17rem 0.17rem 0 0.1rem;
+          box-shadow: #fff 0.17rem 0.17rem 0 0,#000 0.17rem 0.17rem 0 0.1rem;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   color: #fff;
   cursor: pointer;
   display: inline-block;
   font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
-  font-size: 14px;
+  font-size: 0.8rem;
   font-weight: 400;
-  line-height: 20px;
-  margin: 0 5px 10px 0;
+  line-height: 1.5rem;
+  margin: 0 0.2rem 0.5rem 0;
   overflow: visible;
-  padding: 12px 40px;
+  padding: 0.4rem 2rem;
   text-align: center;
   text-transform: none;
   -ms-touch-action: manipulation;
@@ -772,8 +772,8 @@ nav li {
   -webkit-user-select: none;
   vertical-align: middle;
   white-space: nowrap;
-  -webkit-transition: background-color 500ms;
-  transition: background-color 500ms;
+  -webkit-transition: all 200ms;
+  transition: all 200ms;
 }
 
 .loginpage form button:focus {
@@ -834,6 +834,9 @@ nav li {
 .dashboard {
   width: 100vw;
   height: 100vh;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -848,7 +851,7 @@ nav li {
       -ms-flex-direction: column;
           flex-direction: column;
   margin: 0 auto;
-  width: 60%;
+  width: 80%;
 }
 
 .dashboard h1 {
@@ -878,12 +881,47 @@ nav li {
   width: 100%;
 }
 
-.dashboard .dashboard__main div {
-  border: 2px solid black;
+.dashboard .dashboard__main .card {
+  text-align: center;
+  width: 15rem;
+  margin: 0 1rem;
+  padding-bottom: 1rem;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  background-color: #e6e6e6;
+  color: black;
+  -webkit-box-shadow: 0 0.4rem 0.8rem 0 rgba(0, 0, 0, 0.2);
+          box-shadow: 0 0.4rem 0.8rem 0 rgba(0, 0, 0, 0.2);
+}
+
+.dashboard .dashboard__main .card .card__buttons {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 1rem 1rem 0 1rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-size: 1.5rem;
+}
+
+.dashboard .dashboard__main .card img {
+  width: inherit;
 }
 
 .dashboard .dashboard__main > div:nth-child(1) {
-  width: 60%;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 70%;
 }
 
 .dashboard .dashboard__main > div:nth-child(2) {
@@ -891,6 +929,7 @@ nav li {
 }
 
 .dashboard .dashboard__main > div:nth-child(2) form {
+  border: 2px solid black;
   font-size: 1.6rem;
   padding: 1rem;
   display: -webkit-box;
@@ -915,21 +954,21 @@ nav li {
   background-color: #000;
   background-image: none;
   border: 1px solid #000;
-  border-radius: 4px;
-  -webkit-box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
-          box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
+  border-radius: 0.5rem;
+  -webkit-box-shadow: #fff 0.17rem 0.17rem 0 0,#000 0.17rem 0.17rem 0 0.1rem;
+          box-shadow: #fff 0.17rem 0.17rem 0 0,#000 0.17rem 0.17rem 0 0.1rem;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   color: #fff;
   cursor: pointer;
   display: inline-block;
   font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
-  font-size: 14px;
+  font-size: 0.8rem;
   font-weight: 400;
-  line-height: 20px;
-  margin: 0 5px 10px 0;
+  line-height: 1.5rem;
+  margin: 0 0.2rem 0.5rem 0;
   overflow: visible;
-  padding: 12px 40px;
+  padding: 0.4rem 2rem;
   text-align: center;
   text-transform: none;
   -ms-touch-action: manipulation;
@@ -940,8 +979,8 @@ nav li {
   -webkit-user-select: none;
   vertical-align: middle;
   white-space: nowrap;
-  -webkit-transition: background-color 500ms;
-  transition: background-color 500ms;
+  -webkit-transition: all 200ms;
+  transition: all 200ms;
 }
 
 .dashboard .dashboard__main > div:nth-child(2) form button:focus {
