--- a/src/Sass&Css/_variables&functions.scss
+++ b/src/Sass&Css/_variables&functions.scss
@@ -11,32 +11,31 @@ $discordblue: rgb(99,98,203);
 $boxColor: rgb(0,162,226);
 $spotifyGreen: #2ecc71;
 @mixin button {
-      appearance: button;
-      background-color: #000;
-      background-image: none;
-      border: 1px solid #000;
-      border-radius: 4px;
-      box-shadow: #fff 4px 4px 0 0,#000 4px 4px 0 1px;
-      box-sizing: border-box;
-      color: #fff;
-      cursor: pointer;
-      display: inline-block;
-      font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
-      font-size: 14px;
-      font-weight: 400;
-      line-height: 20px;
-      margin: 0 5px 10px 0;
-      overflow: visible;
-      padding: 12px 40px;
-      text-align: center;
-      text-transform: none;
-      touch-action: manipulation;
-      user-select: none;
-      -webkit-user-select: none;
-      vertical-align: middle;
-      white-space: nowrap;
-      transition: background-color 500ms;
-    
+  appearance: button;
+  background-color: #000;
+  background-image: none;
+  border: 1px solid #000;
+  border-radius: 0.5rem;
+  box-shadow: #fff 0.17rem 0.17rem 0 0,#000 0.17rem 0.17rem 0 0.1rem;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
+  font-size: 0.8rem;
+  font-weight: 400;
+  line-height: 1.5rem;
+  margin: 0 0.2rem 0.5rem 0;
+  overflow: visible;
+  padding: 0.4rem 2rem;
+  text-align: center;
+  text-transform: none;
+  touch-action: manipulation;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  transition: all 200ms;
     &:focus {
       text-decoration: none;
     }
