--- a/src/Sass&Css/App.scss
+++ b/src/Sass&Css/App.scss
@@ -471,6 +471,7 @@ nav{
       text-align: center;
       width: 15rem;
       margin: 0 1rem;
+      margin-bottom: 1rem;
       padding-bottom: 1rem;
       height: fit-content;
       background-color: rgb(230, 230, 230);
