--- a/src/Sass&Css/App.scss
+++ b/src/Sass&Css/App.scss
@@ -202,10 +202,48 @@ body {
 //MyWorks
 
 .mywork{
+  font-size: 1vw;
   @include fullScreen;
-  height: 70vh;
+  height: fit-content;
   text-align: center;
   @include flexCenter(column)
+}
+
+
+.galleryMode{
+  width: 100%;
+  height: 100%;
+  @include flexCenter(row);
+  flex-wrap: wrap;
+.galleryCard{
+  margin: 1em;
+  height: 18em;
+  width: fit-content;
+  position: relative;
+  &:hover > img{
+    filter: blur(0.3em);
+  }
+  &:hover > P {
+    z-index: 2;
+    opacity: 1;
+  }
+  p{
+    font-size: 0.8em;
+    transition: opacity 500ms;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    color: white;
+    padding: 1em;
+    z-index: -1;
+    opacity: 0;
+  }
+
+  img{
+    transition: filter 300ms;
+    height: inherit;
+  }
+}
 }
 
 //values
@@ -530,4 +568,67 @@ nav{
       }
     }
   }
+}
+
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 3.4rem;
+  height: 1.9rem;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 1.5rem;
+  width: 1.5rem;
+  left: 0.2rem;
+  bottom: 0.2rem;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 0.1rem #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(1.5rem);
+  -ms-transform: translateX(1.5rem);
+  transform: translateX(1.5rem);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 1rem;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
