--- a/src/Sass&Css/App.scss
+++ b/src/Sass&Css/App.scss
@@ -552,6 +552,9 @@ nav{
         padding: 1rem 1rem 0 1rem;
         justify-content: space-between;
         font-size: 1.5rem;
+        .card__button:hover{
+          cursor: pointer;
+        }
       }
       img{
         width: inherit;
