--- a/src/Sass&Css/App.css
+++ b/src/Sass&Css/App.css
@@ -19,6 +19,10 @@ body {
   overflow-x: hidden;
 }
 
+section {
+  overflow-y: hidden;
+}
+
 .video-header {
   position: relative;
   text-align: center;
@@ -229,7 +233,7 @@ body {
 
 .aboutMe .aboutMe-div .aboutme-right {
   margin: 2em 0;
-  width: 50%;
+  width: 100%;
   height: 100%;
 }
 
@@ -522,6 +526,7 @@ body {
 }
 
 .contact {
+  font-family: "Inter", sans-serif;
   width: 100vw;
   height: 100vh;
   height: -webkit-fit-content;
@@ -542,6 +547,10 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+.contact .contact__title {
+  margin-bottom: 2rem;
 }
 
 .contact .card {
