--- a/src/Sass&Css/App.css
+++ b/src/Sass&Css/App.css
@@ -19,6 +19,19 @@ body {
   overflow-x: hidden;
 }
 
+body::-webkit-scrollbar-track {
+  background-color: white;
+}
+
+body::-webkit-scrollbar {
+  width: 0.45rem;
+  background-color: white;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #e84c3d;
+}
+
 section {
   overflow-y: hidden;
 }
@@ -792,6 +805,20 @@ nav li {
   border-radius: 50%;
   border: 0.2rem solid #e84c3d;
   background-color: transparent;
+  -webkit-transition: all 500ms;
+  transition: all 500ms;
+}
+
+.navObserver {
+  border: 0.2rem solid black;
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
+}
+
+.navObserverW {
+  border: 0.2rem solid white;
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
 }
 
 .loginpage {
