--- a/src/Sass&Css/App.scss
+++ b/src/Sass&Css/App.scss
@@ -9,6 +9,7 @@
   padding: 0;
   margin: 0;
   scroll-behavior: smooth;
+  list-style: none;
 }
 html {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
@@ -677,4 +678,24 @@ input:checked + .slider:before {
 
 .slider.round:before {
   border-radius: 50%;
+}
+
+
+//footer
+
+.footer{
+  height: fit-content;
+  background-color: #343434;
+  padding: 2rem;
+  .button{
+    @include button;
+  }
+  @include flexCenter(column);
+  ul{
+    @include flexCenter(row);
+    li{
+      padding: 1rem;
+    }
+  }
+  color: white;
 }
