--- a/src/Sass&Css/App.scss
+++ b/src/Sass&Css/App.scss
@@ -131,13 +131,14 @@ section{
 //SKILLS
 
 .skills{
-  @include fullScreen;
+ width: 100vw;
   height: fit-content;
   padding: 6em 0;
   @include flexCenter(row);
   border: 2px solid black;
   background-color: $card;
   color: white;
+  font-size: 1vw;
   .skills__left, .skills__right{
     @include flexCenter(column);
     width: fit-content;
@@ -146,12 +147,12 @@ section{
     text-align: Center;
     background-color: $gray;
     border-radius: 2rem;
-    margin: 0 2rem;
+    margin: 0 2em;
     h1{
       font-family: "Inter", sans-serif;
       color: white(255,115,92);
-      font-size: 2rem;
-      letter-spacing: 0.1rem;
+      font-size: 2em;
+      letter-spacing: 0.1em;
     }
   }
 }
@@ -163,8 +164,8 @@ section{
   margin: 1em;
   font-size: 1vw;
   position: relative;
-  width: 6rem;
-  height: 6rem;
+  width: 6em;
+  height: 6em;
   transition: filter 500ms;
   &:hover > .img-wrapper{
     filter:brightness(0.8);
@@ -219,13 +220,14 @@ section{
 }
 
 .myworks__header{
-  padding-bottom: 1rem;
+  font-size: 1vw;
+  padding-bottom: 1em;
   h1, h3{
     font-family:  "Inter", sans-serif;
-    margin-bottom: 0.8rem;
+    margin-bottom: 0.8em;
   }
   h1{
-    margin-bottom: 2rem;
+    margin-bottom: 2em;
   }
 
  
@@ -282,17 +284,17 @@ section{
 
 .values{
   @include fullScreen;
- 
-  padding: 5em 3rem;
+  font-size: 1vw;
+  padding: 5em 3em;
   @include flexCenter(column);
   height: fit-content;
   background-color: black;
   color: white;
   text-align: center;
   & > *{
-    margin-bottom: 2rem;
+    margin-bottom: 2em;
     width: 70%;
-    font-size: 1.8rem;
+    font-size: 1.8em;
   }
 }
 
@@ -622,10 +624,11 @@ nav{
 
 
 .switch {
+  font-size: 1vw;
   position: relative;
   display: inline-block;
-  width: 3.4rem;
-  height: 1.9rem;
+  width: 3.4em;
+  height: 1.9em;
 }
 
 /* Hide default HTML checkbox */
@@ -651,10 +654,10 @@ nav{
 .slider:before {
   position: absolute;
   content: "";
-  height: 1.5rem;
-  width: 1.5rem;
-  left: 0.2rem;
-  bottom: 0.2rem;
+  height: 1.5em;
+  width: 1.5em;
+  left: 0.2em;
+  bottom: 0.2em;
   background-color: white;
   -webkit-transition: .4s;
   transition: .4s;
@@ -665,18 +668,18 @@ input:checked + .slider {
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 0.1rem #2196F3;
+  box-shadow: 0 0 0.1em #2196F3;
 }
 
 input:checked + .slider:before {
-  -webkit-transform: translateX(1.5rem);
-  -ms-transform: translateX(1.5rem);
-  transform: translateX(1.5rem);
+  -webkit-transform: translateX(1.5em);
+  -ms-transform: translateX(1.5em);
+  transform: translateX(1.5em);
 }
 
 /* Rounded sliders */
 .slider.round {
-  border-radius: 1rem;
+  border-radius: 1em;
 }
 
 .slider.round:before {
@@ -687,9 +690,10 @@ input:checked + .slider:before {
 //footer
 
 .footer{
+  font-size: 1vw;
   height: fit-content;
   background-color: #343434;
-  padding: 2rem;
+  padding: 2em;
   .button{
     @include button;
   }
@@ -697,8 +701,109 @@ input:checked + .slider:before {
   ul{
     @include flexCenter(row);
     li{
-      padding: 1rem;
+      padding: 1em;
     }
   }
   color: white;
+}
+
+@media all and (max-width: 425px) {
+  .video-header{
+  .viewport-header{
+    h2{
+      font-size: 5rem;
+      span{
+        font-size: 11rem;
+    }
+    }
+  } 
+}
+
+.aboutMe{
+  p:nth-child(1){
+    font-size: 1.5em;
+    margin-top: 2em;
+  }
+  font-size: 3vw;
+  .aboutMe-div{
+    margin-top: 4em;
+    width: 100%;
+    flex-direction: column;
+    .aboutme-right{
+      img{
+        height: auto;
+      }
+    }
+    .plx{
+      width: 80%;
+    }
+  }
+}
+
+.skills{
+font-size: 2.5vw;
+flex-direction: column;
+.skills__left, .skills__right{
+  padding: 1.7em;
+}
+.skills__left{
+  margin-bottom: 10rem;
+}
+}
+.skillsCard{
+  font-size: 2vw;
+  width: 8em;
+  height: 8em;
+  p{
+    font-size: 1.5em;
+  }
+}
+.myworks__header{
+  font-size: 4vw;
+  h1{
+    margin-bottom: 1em;
+  }
+  h3{
+    margin-bottom: 0.4em;
+  }
+}
+
+.switch{
+  font-size: 3vw;
+}
+
+.galleryMode{
+.galleryCard{
+  p{
+    font-size: 1.4em;
+  }
+}
+}
+
+.values{
+  font-size: 2vw;
+  padding: 2em 1em;
+  & > * {
+    font-size: 1.6em;
+  }
+}
+
+.contact{
+  font-size: 2vw;
+  .cardRight{
+    display: none;
+  }
+  .cardLeft{
+    width: 90vw;
+    border-radius: 2em;
+  }
+}
+
+.footer{
+  font-size: 3vw;
+}
+
+nav{
+  display: none;
+}
 }
