--- a/src/Sass&Css/_variables&functions.scss
+++ b/src/Sass&Css/_variables&functions.scss
@@ -15,19 +15,19 @@ $spotifyGreen: #2ecc71;
   background-color: #000;
   background-image: none;
   border: 1px solid #000;
-  border-radius: 0.5rem;
-  box-shadow: #fff 0.17rem 0.17rem 0 0,#000 0.17rem 0.17rem 0 0.1rem;
+  border-radius: 0.5em;
+  box-shadow: #fff 0.17em 0.17em 0 0,#000 0.17em 0.17em 0 0.1em;
   box-sizing: border-box;
   color: #fff;
   cursor: pointer;
   display: inline-block;
   font-family: ITCAvantGardeStd-Bk,Arial,sans-serif;
-  font-size: 0.8rem;
+  font-size: 0.8em;
   font-weight: 400;
-  line-height: 1.5rem;
-  margin: 0 0.2rem 0.5rem 0;
+  line-height: 1.5em;
+  margin: 0 0.2em 0.5em 0;
   overflow: visible;
-  padding: 0.4rem 2rem;
+  padding: 0.4em 2em;
   text-align: center;
   text-transform: none;
   touch-action: manipulation;
