--- a/src/Sass&Css/App.css
+++ b/src/Sass&Css/App.css
@@ -1,5 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Barlow:wght@200;400;500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap");
+.notice {
+  font-size: 1rem;
+  font-family: sans-serif;
+  letter-spacing: 0.1rem;
+  color: red;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
