--- a/src/Sass&Css/App.scss
+++ b/src/Sass&Css/App.scss
@@ -3,7 +3,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500&display=swap');
 
 
-
+.notice{
+  font-size: 1rem;
+  font-family: sans-serif;
+  letter-spacing: 0.1rem;
+  color: red;
+}
 *{
   box-sizing: border-box;
   padding: 0;
