--- a/src/Sass&Css/_variables&functions.scss
+++ b/src/Sass&Css/_variables&functions.scss
@@ -10,6 +10,10 @@ $darkmode: rgb(50,54,57);
 $discordblue: rgb(99,98,203);
 $boxColor: rgb(0,162,226);
 $spotifyGreen: #2ecc71;
+$darkmodeAlt: #343434;
+$bloodOrange: #e84c3d;
+$blue: #2196F3;
+
 @mixin button {
   appearance: button;
   background-color: #000;
